--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "version": "0.1.0",
   "authors": [
     "Cheng Zhu<cheng@aqmin.com>",
-    "Steve Hu <stevehu@gmail.com>"
+    "Steve Hu <stevehu@gmail.com>",
+    "Benjamin Orozco <benoror@gmail.com>"
   ],
   "moduleType": [
     "globals"
@@ -22,7 +23,7 @@
     "schema",
     "ui-select",
     "angular-ui-select",
-    "angular-schmea-form-ui-select"
+    "angular-schema-form-ui-select"
   ],
   "license": "MIT",
   "ignore": [
